--- a/EKart/View/Cart/CartTotalTableViewCell.xib
+++ b/EKart/View/Cart/CartTotalTableViewCell.xib
@@ -1,21 +1,69 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="CartTotalTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="130" id="KGk-i7-Jjw" customClass="CartTotalTableViewCell" customModule="EKart" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="130"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="129.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="efw-Ni-uGe">
+                        <rect key="frame" x="251" y="16" width="53" height="37"/>
+                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="21"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ikX-s6-i8g">
+                        <rect key="frame" x="10" y="68" width="300" height="53"/>
+                        <color key="backgroundColor" red="0.57380741830000004" green="0.56553578380000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="300" id="Z4l-VV-Mih"/>
+                            <constraint firstAttribute="height" constant="53" id="oxa-nz-UDy"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="20"/>
+                        <state key="normal" title="PROCEED TO PAY">
+                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </state>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                <real key="value" value="26.5"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                        <connections>
+                            <action selector="proceedToPayTouched:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="P1d-X6-fa2"/>
+                        </connections>
+                    </button>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="efw-Ni-uGe" firstAttribute="right" secondItem="H2p-sc-9uM" secondAttribute="right" priority="3" constant="-16" id="HyB-NB-TOD"/>
+                    <constraint firstItem="ikX-s6-i8g" firstAttribute="top" secondItem="efw-Ni-uGe" secondAttribute="bottom" constant="15" id="NpP-2Q-KAy"/>
+                    <constraint firstItem="efw-Ni-uGe" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="Rl0-C0-UfA"/>
+                    <constraint firstItem="efw-Ni-uGe" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="5" id="ZdE-Av-DJH"/>
+                    <constraint firstItem="ikX-s6-i8g" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="aQT-ra-ai0"/>
+                    <constraint firstItem="ikX-s6-i8g" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" constant="2" id="d9E-CK-ND7"/>
+                    <constraint firstItem="efw-Ni-uGe" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" priority="2" id="jHF-wu-tTH"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="labelHorizontalConstraint" destination="jHF-wu-tTH" id="83k-IC-Q1w"/>
+                <outlet property="labelTrailingConstraint" destination="HyB-NB-TOD" id="ygR-rb-8ho"/>
+                <outlet property="payButton" destination="ikX-s6-i8g" id="x6T-GH-BcE"/>
+                <outlet property="totalAmountLabel" destination="efw-Ni-uGe" id="CEP-TI-iTx"/>
+            </connections>
+            <point key="canvasLocation" x="137.59999999999999" y="130.43478260869566"/>
         </tableViewCell>
     </objects>
 </document>
