--- a/EKart/View/ProductDetail/ProductDetailViewController.xib
+++ b/EKart/View/ProductDetail/ProductDetailViewController.xib
@@ -1,21 +1,79 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_0" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProductDetailViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProductDetailViewController" customModule="EKart" customModuleProvider="target">
             <connections>
+                <outlet property="cartButton" destination="Ebu-Go-G4n" id="dh3-91-Ma0"/>
+                <outlet property="name" destination="yZn-kq-MOR" id="a4j-eV-rjL"/>
+                <outlet property="price" destination="r3x-lr-eth" id="QFU-dS-mRt"/>
+                <outlet property="productImageView" destination="ArM-EE-ywY" id="vDb-T2-w0K"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ArM-EE-ywY">
+                    <rect key="frame" x="0.0" y="20" width="320" height="180"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="ArM-EE-ywY" secondAttribute="height" multiplier="16:9" id="5pl-Yy-9dc"/>
+                    </constraints>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yZn-kq-MOR">
+                    <rect key="frame" x="16" y="210" width="63.5" height="33"/>
+                    <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="24"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r3x-lr-eth">
+                    <rect key="frame" x="16" y="250" width="55.5" height="30.5"/>
+                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="22"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ebu-Go-G4n">
+                    <rect key="frame" x="10" y="495" width="300" height="53"/>
+                    <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="53" id="2mG-To-MVf"/>
+                        <constraint firstAttribute="width" constant="300" id="cJc-eL-Rjx"/>
+                    </constraints>
+                    <state key="normal" title="Add to Cart">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <real key="value" value="26.5"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                    <connections>
+                        <action selector="cartButtonTouched:" destination="-1" eventType="touchUpInside" id="h4H-UX-kmg"/>
+                    </connections>
+                </button>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="yZn-kq-MOR" firstAttribute="top" secondItem="ArM-EE-ywY" secondAttribute="bottom" constant="10" id="3cT-qg-MHx"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="ArM-EE-ywY" secondAttribute="trailing" id="LGS-Ae-Sgo"/>
+                <constraint firstItem="r3x-lr-eth" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="MYh-Kq-dZB"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="Ebu-Go-G4n" secondAttribute="bottom" constant="20" id="O3N-wV-nGm"/>
+                <constraint firstItem="yZn-kq-MOR" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="XAH-uJ-RRm"/>
+                <constraint firstItem="ArM-EE-ywY" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="aZy-gL-bC5"/>
+                <constraint firstItem="ArM-EE-ywY" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="djT-GH-YMg"/>
+                <constraint firstItem="r3x-lr-eth" firstAttribute="top" secondItem="yZn-kq-MOR" secondAttribute="bottom" constant="7" id="rUf-eJ-fVC"/>
+                <constraint firstItem="Ebu-Go-G4n" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="z9Q-jD-EgC"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
         </view>
     </objects>
