--- a/EKart/View/ProductList/ProductListTableVIewCellTableViewCell.xib
+++ b/EKart/View/ProductList/ProductListTableVIewCellTableViewCell.xib
@@ -1,21 +1,76 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ProductListTableVIewCellTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="64" id="KGk-i7-Jjw" customClass="ProductListTableVIewCellTableViewCell" customModule="EKart" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="63.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mlL-oE-hSw">
+                        <rect key="frame" x="16" y="12" width="40" height="40"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="40" id="0Wh-nF-WOA"/>
+                            <constraint firstAttribute="width" constant="40" id="faf-fM-qwW"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                <integer key="value" value="20"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mtz-yc-mKl">
+                        <rect key="frame" x="64" y="19.5" width="45.5" height="25"/>
+                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yji-lO-v85">
+                        <rect key="frame" x="263.5" y="21" width="40.5" height="22"/>
+                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <view alpha="0.40000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9h7-lS-CvB">
+                        <rect key="frame" x="0.0" y="62.5" width="320" height="1"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="jmh-1t-zxy"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="mlL-oE-hSw" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="00O-88-CN6"/>
+                    <constraint firstItem="Yji-lO-v85" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="RvG-mu-1mY"/>
+                    <constraint firstItem="Yji-lO-v85" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Mtz-yc-mKl" secondAttribute="trailing" constant="10" id="b3s-f3-63n"/>
+                    <constraint firstItem="mlL-oE-hSw" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="bDL-hs-cqr"/>
+                    <constraint firstAttribute="trailing" secondItem="Yji-lO-v85" secondAttribute="trailing" constant="16" id="cZc-21-4mL"/>
+                    <constraint firstAttribute="bottom" secondItem="9h7-lS-CvB" secondAttribute="bottom" id="hbz-AQ-oq6"/>
+                    <constraint firstItem="Mtz-yc-mKl" firstAttribute="leading" secondItem="mlL-oE-hSw" secondAttribute="trailing" constant="8" id="lXb-OP-yJv"/>
+                    <constraint firstItem="9h7-lS-CvB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="uri-YK-kBK"/>
+                    <constraint firstAttribute="trailing" secondItem="9h7-lS-CvB" secondAttribute="trailing" id="wSK-3B-oiX"/>
+                    <constraint firstItem="Mtz-yc-mKl" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="xBo-Ul-8Lb"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="nameLabel" destination="Mtz-yc-mKl" id="Vb2-0v-etH"/>
+                <outlet property="priceLabel" destination="Yji-lO-v85" id="blK-yR-hkI"/>
+                <outlet property="productImageView" destination="mlL-oE-hSw" id="Kll-U7-G4S"/>
+            </connections>
+            <point key="canvasLocation" x="64" y="57.571214392803604"/>
         </tableViewCell>
     </objects>
 </document>
